# ChangeLog for sys-apps/lcdtest
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.4 2007/05/05 17:11:12 chainsaw Exp $

*lcdtest-1.03 (05 May 2007)

  05 May 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.02.ebuild,
  +lcdtest-1.03.ebuild:
  Version bump. Add ~ppc64 keyword, tested on PowerMac 7,3 (64UL) with GCC
  4.1.2; marked 1.02 stable on PPC.

*lcdtest-1.02 (28 Jan 2007)

  28 Jan 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.01.ebuild,
  +lcdtest-1.02.ebuild:
  New upstream release. Added ~ppc keyword. Marked 1.01 stable on x86.

  01 Oct 2005; Andrej Kacian <ticho@gentoo.org> lcdtest-1.01.ebuild:
  Keyworded ~x86.

*lcdtest-1.01 (01 Oct 2005)

  01 Oct 2005; <chainsaw@gentoo.org> +metadata.xml, +lcdtest-1.01.ebuild:
  Initial commit. Ebuild based on the one by Rafal Rzepecki
  <divide@poczta.onet.pl> in bug #105814.
