@@ -4,6 +4,7 @@ Hash: SHA1
 DIST lcdtest-1.01.tar.gz 25974 RMD160 566bb981488ed91abaeb9ed075e6d9d6cd663e0b SHA1 64cf476f75d1f046e5d8e0dcda7c6b5d5cb49cf1 SHA256 6313ce628e2627e9fccd73a4273b983e452263bd5d91a26e33710abee00fb75b
 DIST lcdtest-1.02.tar.gz 29058 RMD160 b282f39039897fe8951d351945ad832c157d8108 SHA1 3e0796fbe3798e57f98ca28bd103eb2516c0760f SHA256 996e6da43b2d0c1e4a5cb49160e6f6a1c40326f378e38abeeccb1f286d7cb748
 DIST lcdtest-1.03.tar.gz 26739 RMD160 84a627b491a959d3b943f6273909ac7e077cb7e3 SHA1 07742e28128ddf082e9e1341f3d29b027e76da16 SHA256 6701efe2fa520b7957324c4a738c6e4b6670771a0da6fc225147690d6c1d8116
+DIST lcdtest-1.04.tar.gz 27018 RMD160 6e3a111474206d4485e95164e79ad353e10f5104 SHA1 5ee7c305430da3dc41d38052ae6564de45c42e7c SHA256 265327fb4a6e8b816966f858bfa882bae30bf44ab186b7bb1dc7da6b41b680f8
 EBUILD lcdtest-1.01.ebuild 676 RMD160 5a80608992bd628778fd9dad64e036c38dbcaa00 SHA1 2098b5988ef7f8b80041907e39fd02def82aeabb SHA256 97471080565c3c4b3f3ab7fe1cd296a4f148d23dfabc7e13dd7e8ce8ff320873
 MD5 2dedc90361776d17bbb619b0d624de7a lcdtest-1.01.ebuild 676
 RMD160 5a80608992bd628778fd9dad64e036c38dbcaa00 lcdtest-1.01.ebuild 676
@@ -16,10 +17,14 @@ EBUILD lcdtest-1.03.ebuild 689 RMD160 dac552183875ca6568c9d6a93e1b92c8e3b14ae8 S
 MD5 02fa37a9b06d3407ba1c3e6082c94bb9 lcdtest-1.03.ebuild 689
 RMD160 dac552183875ca6568c9d6a93e1b92c8e3b14ae8 lcdtest-1.03.ebuild 689
 SHA256 f9b9fba413033c5c3d0d89a199a9c2ceedadd51fbb588016188a34d57c182979 lcdtest-1.03.ebuild 689
-MISC ChangeLog 929 RMD160 f04069dd9b622f8844226a0a57ed9df630051d75 SHA1 00be9eb0068c35b2087fc8637fddc0286431a73c SHA256 befa2c79755e98bf91342aff332f1b776b9ea510e7a5842e6c22f90b52f5a96f
-MD5 3fe1994464e67d00716bd79dc1bde476 ChangeLog 929
-RMD160 f04069dd9b622f8844226a0a57ed9df630051d75 ChangeLog 929
-SHA256 befa2c79755e98bf91342aff332f1b776b9ea510e7a5842e6c22f90b52f5a96f ChangeLog 929
+EBUILD lcdtest-1.04.ebuild 689 RMD160 9b59e2128ca82bac6702b159574358ee65037118 SHA1 15ab8cfbf77b501867f58b8b27ffc3f20d24e40a SHA256 a4c2ba02ed02aa5cf37c1875b0d7291ffafcdc6dc1585db53f8577cbbc104f20
+MD5 7b12e3021575f2e363a3754e0371f1d1 lcdtest-1.04.ebuild 689
+RMD160 9b59e2128ca82bac6702b159574358ee65037118 lcdtest-1.04.ebuild 689
+SHA256 a4c2ba02ed02aa5cf37c1875b0d7291ffafcdc6dc1585db53f8577cbbc104f20 lcdtest-1.04.ebuild 689
+MISC ChangeLog 1154 RMD160 08df330828cc6d7c41ac3fdcd5e1d3f505811e82 SHA1 1fa184d8072411b82e04b3f7247773fd2e5a8c29 SHA256 1c25b401c76e3bb4c369e9f0d3be11b84150fb551cf0c6b05029b6fcd26ffbcf
+MD5 a17fd78465903e57029b05b43790c767 ChangeLog 1154
+RMD160 08df330828cc6d7c41ac3fdcd5e1d3f505811e82 ChangeLog 1154
+SHA256 1c25b401c76e3bb4c369e9f0d3be11b84150fb551cf0c6b05029b6fcd26ffbcf ChangeLog 1154
 MISC metadata.xml 254 RMD160 823c99a514af57fe285c45f08538b7cc18e6342a SHA1 de5f6d0faac7d5f11daa399f9e875c30cac2ce64 SHA256 2817a53a07dd68fef8ec5467cb1a8441e87d77bd7eaf8ce9971de1adfbab7bdc
 MD5 eeee4743c4e463eeed3a7a4c15380e0d metadata.xml 254
 RMD160 823c99a514af57fe285c45f08538b7cc18e6342a metadata.xml 254
@@ -33,10 +38,13 @@ SHA256 3cca6ab67d38c3d24c8fb317a0bf8bb7cb0e9bc56854fb52ac896704876273d0 files/di
 MD5 1ad235a24f873d9065b3b74609fef823 files/digest-lcdtest-1.03 235
 RMD160 682ddbeef10f282c9dafda4048c1b2897be9e08f files/digest-lcdtest-1.03 235
 SHA256 6adb4c4689371a514c2198ad7324c95721deb9f8813d5f35538bace4b5e4729d files/digest-lcdtest-1.03 235
+MD5 802a4371540ad226b9b255a839eb5502 files/digest-lcdtest-1.04 235
+RMD160 5e327a4771a5216ee4727d9b05b02a39e71d52c4 files/digest-lcdtest-1.04 235
+SHA256 08fca4399c61bfc57177a2a45899602a3958aa72eb952b88af54c5d6ab162043 files/digest-lcdtest-1.04 235
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFGPLmPp5vW4rUFj5oRAuAJAJ47TJcjtoRjhhdL5XEEqiEU9a0ivwCfalP5
-g780/vV1rQNnEWArssCcXzc=
-=MGLl
+iD8DBQFGP6pCp5vW4rUFj5oRAu9TAKC3HXnwLP6vvqBAxM4IBUlBSAqdfACgu1xB
+skRsiIrLL0sbsEEXzOKc3rQ=
+=ixk/
 -----END PGP SIGNATURE-----
