@@ -1,0 +1,3 @@
+MD5 7a5a34206438b628b8e5aea3da2ed84a lcdtest-1.04.tar.gz 27018
+RMD160 6e3a111474206d4485e95164e79ad353e10f5104 lcdtest-1.04.tar.gz 27018
+SHA256 265327fb4a6e8b816966f858bfa882bae30bf44ab186b7bb1dc7da6b41b680f8 lcdtest-1.04.tar.gz 27018
