@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/lcdtest
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.4 2007/05/05 17:11:12 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.5 2007/05/07 22:17:29 chainsaw Exp $
+
+*lcdtest-1.04 (07 May 2007)
+
+  07 May 2007; Tony Vroon <chainsaw@gentoo.org> +lcdtest-1.04.ebuild:
+  Version bump, closes bug #164258. Thanks to Toralf Förster
+  <toralf.foerster@gmx.de> and Eric Smith <eric@brouhaha.com>.
 
 *lcdtest-1.03 (05 May 2007)
 
